[package]
name = "phototools"
version = "0.1.0"
authors = ["David Bosschaert <david.bosschaert@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2"
chrono = "0.4"
env_logger = "0.7"
filetime = "0.2"
log = "0.4"
kamadak-exif = "0.3.1"
regex = "1"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
panic = 'abort'
codegen-units = 1

# Also: strip <binary_name>
