[package]
name = "phototools"
version = "0.2.0"
authors = ["David Bosschaert <david.bosschaert@gmail.com>"]
edition = "2018"

[dependencies]
clap = "4"
chrono = "0.4"
env_logger = "0.11"
filetime = "0.2"
log = "0.4"
kamadak-exif = "0.6"
regex = "1"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
panic = 'abort'
codegen-units = 1

[[bin]]
name = "phototools"
path = "src/bin/main.rs"

# Also: strip <binary_name>
